--- a/Mateupdates/.vscode/settings.json
+++ b/Mateupdates/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "minishell.h": "c",
-        "__locale": "c"
+        "__locale": "c",
+        "readline.h": "c",
+        "string.h": "c",
+        "libft.h": "c"
     }
 }
